--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 clap = { version = "4.5.7", features = ["derive"] }
 crossterm = "0.27.0"
 ratatui = "0.26.3"
+savefile = "0.17"
+savefile-derive = "0.17"
