--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.7", features = ["derive"] }
 crossterm = "0.27.0"
+rand = "0.8.5"
 ratatui = "0.26.3"
 savefile = "0.17"
 savefile-derive = "0.17"
