--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "mrKrabs"
-version = "0.1.0"
+version = "1.1.0"
 edition = "2021"
+authors = ["Tharun Tilakumara"]
+readme = "README.md"
+repository = "https://github.com/DrCheeseFace/Krabby-gotchi"
+license = "MIT"
+description = "A CLI based virtual pet game"
 
 [dependencies]
 clap = { version = "4.5.7", features = ["derive"] }
